Cherry pick commits for releasing v2.0.0 (#2156)
* Support gang scheduling with Yunikorn (#2107)

* Add Yunikorn scheduler and example

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

* Add test cases

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

* Add code comments

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

* Add license comment

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

* Inline mergeNodeSelector

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

* Fix initial number implementation

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>

---------

Signed-off-by: Jacob Salway <jacob.salway@gmail.com>
(cherry picked from commit 8fcda1265759df57943e7498478bcc8ce4795d7c)
Signed-off-by: Yi Chen <github@chenyicn.net>

* Update Makefile for building sparkctl (#2119)

Signed-off-by: Yi Chen <github@chenyicn.net>
(cherry picked from commit 4bc6e89708e0dee5f07fb6b586e559e529cdb98b)
Signed-off-by: Yi Chen <github@chenyicn.net>

* fix: Add default values for namespaces to match usage descriptions  (#2128)

* fix: Add default values for namespaces to match usage descriptions

Signed-off-by: pengfei4.li <pengfei4.li@ly.com>

* fix: remove incorrect cache settings

Signed-off-by: pengfei4.li <pengfei4.li@ly.com>

---------

Signed-off-by: pengfei4.li <pengfei4.li@ly.com>
Co-authored-by: pengfei4.li <pengfei4.li@ly.com>
(cherry picked from commit 52f818d5351d44e64ec8dd5b7403f7d524c620a8)
Signed-off-by: Yi Chen <github@chenyicn.net>

* Fix: Spark role binding did not render properly when setting spark service account name (#2135)

Signed-off-by: Yi Chen <github@chenyicn.net>
(cherry picked from commit a1a38ea2f12e666b29dae1a3bf6d7e768877083f)
Signed-off-by: Yi Chen <github@chenyicn.net>

* Reintroduce option webhook.enable (#2142)

Signed-off-by: Yi Chen <github@chenyicn.net>
(cherry picked from commit 9e88049af1beb51ea7d765e298ff2b35789c053f)
Signed-off-by: Yi Chen <github@chenyicn.net>

* Add default batch scheduler argument (#2143)

* A

--- a/.github/workflows/release-helm-charts.yaml
+++ b/.github/workflows/release-helm-charts.yaml
@@ -2,17 +2,25 @@ name: Release Helm charts
 
 on:
   release:
-    types: [published]
+    types:
+      - published
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  HELM_REGISTRY: ghcr.io
+  HELM_REPOSITORY: ${{ github.repository_owner }}/helm-charts
+
 jobs:
-  build:
+  release_helm_charts:
     permissions:
       contents: write
+      packages: write
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -27,10 +35,28 @@ jobs:
         with:
           version: v3.14.4
 
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.HELM_REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Read version from VERSION file
+        run: |
+          VERSION=$(cat VERSION)
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+
       - name: Package Helm charts
         run: |
           for chart in $(ls charts); do
-            helm package charts/$chart
+            helm package charts/${chart}
+          done
+
+      - name: Upload charts to GHCR
+        run: |
+          for pkg in $(ls *.tgz); do
+            helm push ${pkg} oci://${{ env.HELM_REGISTRY }}/${{ env.HELM_REPOSITORY }}
           done
 
       - name: Save packaged charts to temp directory
@@ -44,7 +70,7 @@ jobs:
           ref: gh-pages
           fetch-depth: 0
 
-      - name: Copy packages charts
+      - name: Copy packaged charts
         run: |
           cp /tmp/charts/*.tgz .
 
@@ -52,7 +78,7 @@ jobs:
         env:
           CHART_URL: https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}
         run: |
-          helm repo index --merge index.yaml --url $CHART_URL .
+          helm repo index --merge index.yaml --url ${CHART_URL} .
           git add index.yaml
-          git commit -s -m "Update index.yaml" || exit 0
+          git commit -s -m "Add index for Spark operator chart ${VERSION}" || exit 0
           git push
