--- a/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -3179,6 +3179,10 @@ spec:
                           - protocol
                           type: object
                         type: array
+                      priorityClassName:
+                        description: PriorityClassName is the name of the PriorityClass
+                          for the driver pod.
+                        type: string
                       schedulerName:
                         description: SchedulerName specifies the scheduler that will
                           be used for scheduling
@@ -7946,6 +7950,10 @@ spec:
                           - protocol
                           type: object
                         type: array
+                      priorityClassName:
+                        description: PriorityClassName is the name of the PriorityClass
+                          for the executor pod.
+                        type: string
                       schedulerName:
                         description: SchedulerName specifies the scheduler that will
                           be used for scheduling
