--- a/charts/spark-operator-chart/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/charts/spark-operator-chart/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -3127,6 +3127,10 @@ spec:
                       - protocol
                       type: object
                     type: array
+                  priorityClassName:
+                    description: PriorityClassName is the name of the PriorityClass
+                      for the driver pod.
+                    type: string
                   schedulerName:
                     description: SchedulerName specifies the scheduler that will be
                       used for scheduling
@@ -7864,6 +7868,10 @@ spec:
                       - protocol
                       type: object
                     type: array
+                  priorityClassName:
+                    description: PriorityClassName is the name of the PriorityClass
+                      for the executor pod.
+                    type: string
                   schedulerName:
                     description: SchedulerName specifies the scheduler that will be
                       used for scheduling
