--- a/charts/spark-operator-chart/templates/spark/serviceaccount.yaml
+++ b/charts/spark-operator-chart/templates/spark/serviceaccount.yaml
@@ -15,16 +15,19 @@ limitations under the License.
 */}}
 
 {{- if .Values.spark.serviceAccount.create }}
-{{- range $sparkJobNamespace := .Values.spark.jobNamespaces | default list }}
+{{- range $jobNamespace := .Values.spark.jobNamespaces | default list }}
+{{- if ne $jobNamespace "" }}
+
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "spark-operator.spark.serviceAccountName" $ }}
-  namespace: {{ $sparkJobNamespace }}
+  namespace: {{ $jobNamespace }}
   labels: {{ include "spark-operator.labels" $ | nindent 4 }}
   {{- with $.Values.spark.serviceAccount.annotations }}
   annotations: {{ toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 {{- end }}
 {{- end }}
