--- a/charts/spark-operator-chart/tests/spark/serviceaccount_test.yaml
+++ b/charts/spark-operator-chart/tests/spark/serviceaccount_test.yaml
@@ -66,59 +66,36 @@ tests:
           path: metadata.annotations.key2
           value: value2
 
-  - it: Should create multiple service accounts if `spark.jobNamespaces` is set
+  - it: Should create service account for every non-empty spark job namespace if `spark.jobNamespaces` is set with multiple values
     set:
       spark:
-        serviceAccount:
-          name: spark
         jobNamespaces:
+          - ""
           - ns1
           - ns2
-          - ns3
     documentIndex: 0
     asserts:
       - hasDocuments:
-          count: 3
+          count: 2
       - containsDocument:
           apiVersion: v1
           kind: ServiceAccount
-          name: spark
+          name: spark-operator-spark
           namespace: ns1
 
-  - it: Should create multiple service accounts if `spark.jobNamespaces` is set
+  - it: Should create service account for every non-empty spark job namespace if `spark.jobNamespaces` is set with multiple values
     set:
       spark:
-        serviceAccount:
-          name: spark
         jobNamespaces:
+          - ""
           - ns1
           - ns2
-          - ns3
     documentIndex: 1
     asserts:
       - hasDocuments:
-          count: 3
+          count: 2
       - containsDocument:
           apiVersion: v1
           kind: ServiceAccount
-          name: spark
+          name: spark-operator-spark
           namespace: ns2
-
-  - it: Should create multiple service accounts if `spark.jobNamespaces` is set
-    set:
-      spark:
-        serviceAccount:
-          name: spark
-        jobNamespaces:
-          - ns1
-          - ns2
-          - ns3
-    documentIndex: 2
-    asserts:
-      - hasDocuments:
-          count: 3
-      - containsDocument:
-          apiVersion: v1
-          kind: ServiceAccount
-          name: spark
-          namespace: ns3
