--- a/charts/spark-operator-chart/templates/webhook/validatingwebhookconfiguration.yaml
+++ b/charts/spark-operator-chart/templates/webhook/validatingwebhookconfiguration.yaml
@@ -14,6 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */}}
 
+{{- if .Values.webhook.enable }}
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
@@ -33,15 +34,17 @@ webhooks:
   {{- with .Values.webhook.failurePolicy }}
   failurePolicy: {{ . }}
   {{- end }}
-  {{- if .Values.spark.jobNamespaces }}
+  {{- with .Values.spark.jobNamespaces }}
+  {{- if not (has "" .) }}
   namespaceSelector:
     matchExpressions:
     - key: kubernetes.io/metadata.name
       operator: In
       values:
-      {{- range .Values.spark.jobNamespaces }}
-      - {{ . }}
+      {{- range $jobNamespace := . }}
+      - {{ $jobNamespace }}
       {{- end }}
+  {{- end }}
   {{- end }}
   rules:
   - apiGroups: ["sparkoperator.k8s.io"]
@@ -63,15 +66,17 @@ webhooks:
   {{- with .Values.webhook.failurePolicy }}
   failurePolicy: {{ . }}
   {{- end }}
-  {{- if .Values.spark.jobNamespaces }}
+  {{- with .Values.spark.jobNamespaces }}
+  {{- if not (has "" .) }}
   namespaceSelector:
     matchExpressions:
     - key: kubernetes.io/metadata.name
       operator: In
       values:
-      {{- range .Values.spark.jobNamespaces }}
-      - {{ . }}
+      {{- range $jobNamespace := . }}
+      - {{ $jobNamespace }}
       {{- end }}
+  {{- end }}
   {{- end }}
   rules:
   - apiGroups: ["sparkoperator.k8s.io"]
@@ -81,3 +86,4 @@ webhooks:
   {{- with .Values.webhook.timeoutSeconds }}
   timeoutSeconds: {{ . }}
   {{- end }}
+{{- end }}
