--- a/charts/spark-operator-chart/tests/webhook/mutatingwebhookconfiguration_test.yaml
+++ b/charts/spark-operator-chart/tests/webhook/mutatingwebhookconfiguration_test.yaml
@@ -31,6 +31,14 @@ tests:
           kind: MutatingWebhookConfiguration
           name: spark-operator-webhook
 
+  - it: Should not create the mutating webhook configuration if `webhook.enable` is `false`
+    set:
+      webhook:
+        enable: false
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: Should use the specified webhook port
     set:
       webhook:
@@ -49,7 +57,7 @@ tests:
           path: webhooks[*].failurePolicy
           value: Fail
 
-  - it: Should set namespaceSelector if sparkJobNamespaces is not empty
+  - it: Should set namespaceSelector if `spark.jobNamespaces` is set with non-empty strings
     set:
       spark:
         jobNamespaces:
@@ -67,6 +75,19 @@ tests:
                   - ns1
                   - ns2
                   - ns3
+
+  - it: Should not set namespaceSelector if `spark.jobNamespaces` contains empty string
+    set:
+      spark:
+        jobNamespaces:
+          - ""
+          - ns1
+          - ns2
+          - ns3
+    asserts:
+      - notExists:
+          path: webhooks[*].namespaceSelector
+
 
   - it: Should should use the specified timeoutSeconds
     set:
