--- a/charts/spark-operator-chart/tests/webhook/service_test.yaml
+++ b/charts/spark-operator-chart/tests/webhook/service_test.yaml
@@ -24,6 +24,14 @@ release:
   namespace: spark-operator
 
 tests:
+  - it: Should not create webhook service if `webhook.enable` is `false`
+    set:
+      webhook:
+        enable: false
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: Should create the webhook service correctly
     set:
       webhook:
