--- a/charts/spark-operator-chart/tests/webhook/validatingwebhookconfiguration_test.yaml
+++ b/charts/spark-operator-chart/tests/webhook/validatingwebhookconfiguration_test.yaml
@@ -31,6 +31,14 @@ tests:
           kind: ValidatingWebhookConfiguration
           name: spark-operator-webhook
 
+  - it: Should not create the validating webhook configuration if `webhook.enable` is `false`
+    set:
+      webhook:
+        enable: false
+    asserts:
+      - hasDocuments:
+          count: 0
+
   - it: Should use the specified webhook port
     set:
       webhook:
@@ -49,7 +57,7 @@ tests:
           path: webhooks[*].failurePolicy
           value: Fail
 
-  - it: Should set namespaceSelector if `spark.jobNamespaces` is not empty
+  - it: Should set namespaceSelector if `spark.jobNamespaces` is set with non-empty strings
     set:
       spark.jobNamespaces:
         - ns1
@@ -66,6 +74,18 @@ tests:
                   - ns1
                   - ns2
                   - ns3
+
+  - it: Should not set namespaceSelector if `spark.jobNamespaces` contains empty string
+    set:
+      spark:
+        jobNamespaces:
+          - ""
+          - ns1
+          - ns2
+          - ns3
+    asserts:
+      - notExists:
+          path: webhooks[*].namespaceSelector
 
   - it: Should should use the specified timeoutSeconds
     set:
