--- a/charts/spark-operator-chart/Chart.yaml
+++ b/charts/spark-operator-chart/Chart.yaml
@@ -20,9 +20,9 @@ name: spark-operator
 
 description: A Helm chart for Spark on Kubernetes operator.
 
-version: 2.0.0-rc.0
+version: 2.0.0
 
-appVersion: 2.0.0-rc.0
+appVersion: 2.0.0
 
 keywords:
 - apache spark
